# distillpdf

./: .gitignore  CLAUDE.md  Cargo.toml  GOAL.md  LICENSE-APACHE  PROGRESS.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES  build.rs  mkdocs.yml  pyproject.toml  second-opinion-claude.md
.github/workflows/: ci.yml  publish.yml
bench/: GOALS.md  REPORT.md  SONNET_REVIEW.md  bench_distillpdf.py  bench_pdfoxide.py  bench_pylopdf.py  bench_pymupdf4llm.py  compare_headers.py  freeze_refs.py  gates.sh  gen_tables.py  generate.py  header_groundtruth_heldout.json  run.sh  score_quality.py  test_content.py  test_fidelity.py  test_headers.py  test_html.py  test_links.py  test_regions.py  test_tables.py  test_tables_real.py  test_word_spans.py
bench/corpus_tables/: ground_truth.json
bench/fixtures/: Cold_Email_Hacks.pymupdf_plain.txt  arxiv_bert.pymupdf_plain.txt  arxiv_math.pymupdf_plain.txt  astro-ph_GA_2606_02566.pymupdf_plain.txt  code_sample.pymupdf_plain.txt  cs_DS_2606_02492.pymupdf_plain.txt  cs_LG_2606_02576.pymupdf_plain.txt  eess_SP_2606_02448.pymupdf_plain.txt  physics_optics_2606_02571.pymupdf_plain.txt  quant-ph_2606_02574.pymupdf_plain.txt  ref_meta.json  unicode_professional_demo.pymupdf_plain.txt
bench/rust_extra/: Cargo.toml
bench/rust_extra/src/: pdfextract.rs  pdfinspector.rs
distillpdf/: Cargo.toml  README.md  pyproject.toml
distillpdf/python/distillpdf/: __init__.py
distillpdf/src/: extract.rs  html.rs  img.rs  lib.rs  links.rs  text.rs  vector.rs
distillpdf/tests/: test_smoke.py
docs/: datamodel-design.md  getting-started.md  index.md  ocr-setup.md  requirements.txt
docs/about/: contributing.md
docs/guide/: cli.md  dpdf.md  extraction.md  ocr.md  rendering.md  search.md
docs/reference/: dpdf-format.md  python.md
examples/: ocr.ipynb
pylopdf/: Cargo.toml  README.md  pyproject.toml
pylopdf/python/pylopdf/: __init__.py
pylopdf/src/: extract.rs  html.rs  img.rs  lib.rs  text.rs
pylopdf/tests/: test_smoke.py
python/distillpdf/: __init__.py  __main__.py  _backends_granite.py  _backends_mlx.py  _backends_native.py  _backends_pytorch.py  cli.py  doc.py  document.py  dpdf.py  embed.py  ocr.py  shell.py
scripts/: release-check.sh
src/: afm.rs  captions.rs  elem_passes.rs  extract.rs  frontmatter.rs  headings.rs  html.rs  img.rs  layout.rs  lib.rs  links.rs  markdown.rs  nav.rs  postprocess.rs  profile.rs  text.rs  vector.rs
src/model/: build.rs  container.rs  mod.rs  render.rs
src/ocr/: detect.rs  doctags.rs  engine.rs  mod.rs  pdf.rs  render.rs  tess_synth.rs  tesseract.rs
tests/: _fixtures.py  _htmlcheck.py  conftest.py  content_groundtruth.json  gen_demo.py  gen_fixtures.py  gen_tables.py  header_groundtruth.json  requirements-dev.txt  run.sh  test_api.py  test_captions.py  test_cli.py  test_content.py  test_demo.py  test_doc_api.py  test_dpdf_cli.py  test_embed.py  test_fidelity.py  test_figure_recovery.py  test_figures.py  test_footnotes.py  test_frontmatter.py  test_headers.py  test_heading_traps.py  test_headings.py  test_html.py  test_html_shell.py  test_links.py  test_lists.py  test_markdown.py  test_math.py  test_mathfonts.py  test_model.py  test_model_roundtrip.py  test_ocr_ux.py  test_profile.py  test_regions.py  test_sec_headings.py  test_section_mode.py  (+7 more)
tests/corpus_tables/: ground_truth.json
tests/demo/: demo_groundtruth.json
tests/fixtures/: arxiv_nerf.pymupdf_plain.txt  cond-mat_soft_2606_02439.pymupdf_plain.txt  cs_CL_2606_02569.pymupdf_plain.txt  cs_CV_2606_02580.pymupdf_plain.txt  econ_EM_2606_02234.pymupdf_plain.txt  geology_usgs_fs.pymupdf_plain.txt  math_AG_2606_02429.pymupdf_plain.txt  math_GT_2606_02396.pymupdf_plain.txt  math_PR_2606_02570.pymupdf_plain.txt  q-bio_NC_2606_02392.pymupdf_plain.txt  stat_ML_2606_02363.pymupdf_plain.txt
tests/fixtures_pdf/: figures.html  groundtruth.json  headings.html  profile_heads.html
