[package]
name = "distillpdf"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Pure-Rust PDF extraction (text/tables/figures/fonts) that distills documents into clean, LLM-ready HTML — on lopdf, for Python"
repository = "https://github.com/kkollsga/distillpdf"
homepage = "https://github.com/kkollsga/distillpdf"
keywords = ["pdf", "extraction", "llm", "rag", "lopdf"]
categories = ["text-processing", "parser-implementations"]

[lib]
name = "distillpdf"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"] }
lopdf = "0.40"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
jpeg-decoder = "0.3"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
