[package]
name = "distillpdf"
version = "0.0.26"
edition = "2021"
license = "MIT"
description = "Pure-Rust PDF extraction (text/tables/figures/fonts) that distills documents into clean, LLM-ready HTML — on lopdf, for Python"
repository = "https://github.com/kkollsga/distillpdf"
homepage = "https://github.com/kkollsga/distillpdf"
keywords = ["pdf", "extraction", "llm", "rag", "lopdf"]
categories = ["text-processing", "parser-implementations"]

[lib]
name = "distillpdf"
crate-type = ["cdylib", "rlib"]

[features]
# `extension-module` is REQUIRED for the Python wheel (maturin enables it via
# pyproject's [tool.maturin] features), but it makes the test/bench binaries unlinkable
# (it tells pyo3 not to link libpython, so `_PyExc_*` are undefined). Keeping it OPT-IN
# means `cargo test` links normally and the pure-Rust logic gets real unit tests.
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.25", features = ["abi3-py38"] }
lopdf = "0.40"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
jpeg-decoder = "0.3"
fax = "0.2"
rayon = "1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
