[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "distillpdf"
version = "0.0.28"
description = "Pure-Rust PDF extraction that distills documents into clean, LLM-ready HTML — for LLMs and RAG, built on lopdf"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "kkollsga", email = "kkollsga@gmail.com" }]
keywords = [
    "pdf",
    "pdf-extraction",
    "pdf-to-html",
    "pdf-to-text",
    "pdf-parser",
    "text-extraction",
    "table-extraction",
    "document-parsing",
    "llm",
    "rag",
    "ai",
    "nlp",
    "rust",
    "lopdf",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]

[project.optional-dependencies]
# Extra Tesseract languages for the bundled fast OCR engine. The base wheel ships English;
# this pulls a companion data package (Portuguese, Norwegian, …) that the engine discovers
# at runtime — fully offline.  Install with:  pip install 'distillpdf[languages]'
languages = ["distillpdf-tessdata>=0.0.1"]

# OCR for image-only / scanned pages. The core (detection, DocTags parsing,
# HTML/searchable-PDF rendering) is pure Rust and always available; this extra only adds
# the model runtime.  Install with:  pip install 'distillpdf[ocr]'
# (A zero-Python-dep path also exists: bring your own llama-server and use the built-in
#  Rust ServerOcrEngine, or build from source with a future llama-cpp-2 cargo feature.)
ocr = [
    "huggingface-hub>=0.23",
    "pillow>=10",
    "tqdm>=4",  # default progress bar for the model download + per-page OCR

    # Apple Silicon: run granite-docling natively on Metal via MLX. mlx-vlm pulls
    # mlx + transformers but NOT PyTorch. transformers is pinned <5 (the idefics3 image
    # processor changed in 5.x and breaks the MLX load).
    "mlx-vlm>=0.3; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "transformers>=4.57,<5; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Everywhere else (Windows/Linux, Intel Mac): granite-docling GGUF via llama-cpp-python
    # (CUDA/CPU). This wheel ships pre-built and does NOT pull PyTorch. (PEP 508 markers have
    # no unary `not (...)`, so this is De Morgan's of "not (darwin and arm64)".)
    "llama-cpp-python>=0.3.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
]
# An optional PyTorch/vLLM accelerator (granite-docling-pytorch) is PLANNED — see
# python/distillpdf/_backends_pytorch.py. When implemented it will install under a separate
# extra so Apple-Silicon (MLX) and Win/Linux (GGUF) users never pull PyTorch by default.

[project.scripts]
distillpdf = "distillpdf.cli:main"

[project.urls]
Homepage = "https://github.com/kkollsga/distillpdf"
Repository = "https://github.com/kkollsga/distillpdf"
Issues = "https://github.com/kkollsga/distillpdf/issues"
Source = "https://github.com/kkollsga/distillpdf"

[tool.maturin]
features = ["extension-module"]
module-name = "distillpdf._distillpdf"
python-source = "python"
