[package]
name = "distillpdf"
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust PDF extraction (text/tables/figures/fonts) that distills documents into clean, LLM-ready HTML — on lopdf, for Python"

[lib]
name = "distillpdf"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module", "abi3-py38"] }
lopdf = "0.40"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
