[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "distillpdf"
version = "0.0.1"
description = "Pure-Rust PDF extraction that distills documents into clean, LLM-ready HTML, on lopdf"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "distillpdf._distillpdf"
python-source = "python"
